# coin-mena-challenge

./: .gitignore  Dockerfile  docker-compose.yml  entrypoint.sh  manage.py  postman_collection.json  pyproject.toml  readme.md
coin_mena_challenge/: asgi.py  celery_app.py  settings.py  urls.py  wsgi.py
quotes/: models.py  serializers.py  tasks.py  urls.py  views.py
quotes/migrations/: 0001_initial.py
quotes/tests/: factories.py  test_quotes.py
